# vorbis-enc

./: Cargo.toml  README.md
doc/: search-index.js
doc/implementors/core/ops/: trait.Drop.js
doc/src/vorbis_enc/src/: encoder.rs.html  lib.rs.html
doc/vorbis_enc/: index.html  struct.OggVorbisEncoder.html
doc/vorbis_enc/encoder/: sidebar-items.js  struct.OggVorbisEncoder.html
examples/: noise.rs  stereo.rs
src/: encoder.rs  lib.rs
